# Valorant-Thing

./: .gitignore  ABOUT.md  README.md  e.json  gen-icon.cjs  generate-icons.mjs  index.html  package-lock.json  package.json  tailwind.config.js  val.md
.github/workflows/: tauri.yml
src/: App.jsx  index.css  matchCache.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord.rs  lib.rs  main.rs
src-tauri/src/riot/: connection.rs  game.rs  http.rs  logging.rs  mod.rs  process.rs  types.rs  xmpp.rs
src/components/: ChatPage.jsx  FakeStatusPage.jsx  HomePage.jsx  InstalockPage.jsx  LogsPage.jsx  MapDodgePage.jsx  MatchInfoPage.jsx  MiscPage.jsx  PartyPage.jsx  PlayerInfo.jsx  SettingsPage.jsx  Sidebar.jsx  TitleBar.jsx
